--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ license = {file = "LICENSE"}
 dependencies = [
     "arcgis>=2.2.0",
     "numpy>=1.7",
+    "html2text",
     "pandas>=1.0.5",
     "pyarrow>=1.0.0"
 ]
