--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "reach-tools"
-version = "0.0.0"
+version = "0.1.0.dev0"
 authors = [
   { name="Joel McCune (https://github.com/knu2xs)"},
 ]
