--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,7 @@ channels:
   - conda-forge
 
 dependencies:
+  - appnope
   - arcgis
   - black>=21
   - h3-py
@@ -25,7 +26,7 @@ dependencies:
     - azure-storage-blob
     - build
     - bump2version
-    - furo
+    - furoju
     - html2text
     - nbsphinx
     - placekey
