--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,8 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-data/
+data/*
+!data/raw/american_whitewater
 models/
 
 # Mac OS-specific storage files
